no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -2078,12 +2078,12 @@ write|appendFile(FILENAME|UINT,                 #OPTS has same members but also 
 [STDBUFFER,] [OPTS, ] FUNC(ERROR))              #Def flag is "w|a"
 FS-EXTRA.outputFile(...)                       ##Same as writeFile(), but calls ensureFile() first
 FS-EXTRA.writeJson|outputJson(...)             ##Same as writeFile|outputFile(), but with an OBJ (JSON.stringify'd).
-createReadStream(PATH[, OBJ])->ISTREAM          #Preferred over readFile().
+createReadStream(PATH[, OPTS])->ISTREAM         #Preferred over readFile().
                                                 #Useful with ISTREAM.[.pipe(IOSTREAM)...]pipe(OSTREAM):
                                                 #  - transmits to OSTREAM by chunks ("data" events) instead of at once
                                                 #    (readFile())
                                                 #  - can use IOSTREAM as modular transforms functions (like Unix commands)
-                                                #OBJ has members:
+                                                #OPTS has members:
                                                 #  - flags STR (def: "r")
                                                 #  - encoding 'ENCODING' (def: null)
                                                 #  - fd FD_INT (def: null)
@@ -2091,16 +2091,17 @@ createReadStream(PATH[, OBJ])->ISTREAM          #Preferred over readFile().
                                                 #  - autoClose BOOL (def: true): close the file descriptor on error|end event
                                              12*#  - emitClose BOOL (def: false): emit a 'close' event when destroyed
                                                 #  - start|end UINT: only use from bytes UINT to UINT2
+                                             13*#  - fs FS or null (def): override FS.*
                                                 #ISTREAM has extra:
-                                                #  - same members as OBJ
+                                                #  - same members as OPTS
                                                 #  - on('open', FUNC(FD_INT))
                                                 #  - on('ready', FUNC())
                                              11*#  - pending BOOL: true if 'ready' event not emitted yet
                                                 #  - path PATH
                                                 #  - pos UINT
-createWriteStream(PATH[, OBJ])->OSTREAM         #OBJ has members flags, defaultEncoding, fd, mode, autoClose, start
+createWriteStream(PATH[, OPTS])->OSTREAM        #OPTS has members flags, defaultEncoding, fd, mode, autoClose, start
                                                 #OSTREAM has extra:
-                                                #  - same members as OBJ
+                                                #  - same members as OPTS
                                                 #  - 'open', 'ready', path, pos: like createReadStream()
                                              11*#  - pending: like createReadStream()
                                                 #  - bytesWritten UINT
