no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -15,7 +15,7 @@
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #13.6.0 (current), 12.14.0 (active LTS), 10.18.0 (active LTS), 8.17.0 (active LTS)
+VERSION ==>                                     #13.6.0 (current), 12.14.1 (active LTS), 10.18.1 (active LTS), 8.17.0 (active LTS)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -267,6 +267,8 @@ EVENTEMITTER.prepend[Once]Listener(...)         #Like on[ce](...) but adds to be
 once(EVENTEMITTER|EVENTTARGET, 'EVENT')         #Like EVENTEMITTER.once() but using PROMISE:
  ->PROMISE_ARG_ARR                              #  - resolved with ARG_ARR on emit('EVENT', ...ARGS)
                                                 #  - rejected with VAL on emit('error', VAL) (unless 'EVENT' is 'error' itself)
+on(EVENTEMITTER|EVENTTARGET, 'EVENT')
+ ->ASYNC_ITERATOR                            13*#Same but for EVENTEMITTER.on(), as a an ASYNC_ITERATOR
 EVENTEMITTER.off|removeListener('EVENT', FUNC)
   ->EVENTEMITTER                                #
 EVENTEMITTER.removeAllListeners(['EVENT'])
@@ -1049,8 +1051,8 @@ REPLSERVER.displayPrompt([BOOL])                #Like INTERFACE.prompt(BOOL) exc
 REPLSERVER.clearBufferedCommand()               #Discard|ignore the line currently entered
                                                 #Meant to be used inside defineCommand() OBJ.action()
 
-REPLSERVER.setupHistory
- ('PATH', FUNC(ERROR, REPLSERVER))           11*#Must be called to use history.
+REPLSERVER.setupHistory                      11*#Must be called to use history.
+ ('PATH', FUNC(ERROR, REPLSERVER))           13*#Can search for history using CTRL-R
 .save FILE                                      #Save all input so far to FILE
 .load FILE                                      #Input FILE
 
@@ -1381,6 +1383,7 @@ connect([PORT_NUM[,'HOST']]OBJ[,FUNC(TLSSOCKT)])#Like TCP.connect(), but for TLS
                                                 #  - minDHSize NUM (def: 1024)
                                                 #  - lookup FUNC: DNS lookup, def: DNS.lookup()
                                              12*#  - allowHalfOpen: like NET.createServer()
+                                             13*#  - pskCallback('HINT')->{ psk TDBUFFER, identity STR }|null
                                                 #FUNC is 'secureConnect' event handler
                                                 #Returns a TLSSOCKET.
 
