no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -2014,13 +2014,14 @@ you-dont-need-lodash-underscore/ ##Avoid Underscore|Lodash when there is a ES6 e
                                  ##  - _.groupBy(), _.fromPairs() -> ARR.reduce()
                                  ##  - _.partial|bind() -> FUNC.bind()
                                  ##  - _.omit|pick() -> { ...OBJ }
-                                 ##  - _.startsWith() -> STR.startsWith()
+                                 ##  - _.startsWith|endsWith() -> STR.startsWith|endsWith()
                                  ##  - _.isNil|isNull|isUndefined() -> ==|=== null|undefined
                                  ##  - _.split() -> STR.split()
                                  ##  - _.takeRight|drop[Right]() -> ARR.slice()
                                  ##  - _.padStart|End() -> STR.padStart|End()
                                  ##  - _.upperFirst() -> STR[0].toUpperCase()
                                  ##  - _.random() -> Math.random()
+                                 ##  - _.debounce|throttle() -> small helper function
                                  ##Not checked:
                                  ##  - _.chunk() -> ARR.reduce()
                                  ##  - _.sortBy|orderBy() -> ARR.sort()
@@ -2033,7 +2034,7 @@ you-dont-need-lodash-underscore/ ##Avoid Underscore|Lodash when there is a ES6 e
                                  ##  - _.isEmpty() -> Object.keys().length
                                  ##  - _.keyBy() -> ARR.reduce()
                                  ##  - _.inRange() -> < >
-                                 ##Node module "eslint-plugin-you-dont-need-lodash-underscore" (6.8.0)
+                                 ##Node module "eslint-plugin-you-dont-need-lodash-underscore" (6.9.0)
 
 
                                              /=+===============================+=\
