no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -9,7 +9,7 @@ ALTERNATIVES ==>                  #  - eslint (prefered): more rules, more confi
                                   #  - jscs: not maintained, merged with eslint
                                   #  - jshint
 
-VERSION ==>                       #6.8.0
+VERSION ==>                       #7.0.0-alpha.1
                                   #JavaScript linter, using Espree parser.
 
 TYPE                              #ESTree type
@@ -70,7 +70,7 @@ CONF.overrides                    #Sub-CONF for specific files, with CONF_ARR, a
 
 ./.eslintignore                   #Similar to .gitignore (same syntax)
 eslint --ignore-pattern PATTERN   #Dot files are ignored unless whitelisted with '!...'
-package.json "eslintIgnore" STRARR#Files in /node_modules and /bower_components are always ignored
+package.json "eslintIgnore" STRARR#Files in /node_modules are always ignored
 
 eslint --ignore-path FILE         #Alternative name for .eslintignore (e.g. reusing .gitignore)
 eslint --no-ignore                #Do not use .eslintignore
@@ -102,6 +102,8 @@ eslint --rule 'RULE: RULECONF'    #Exit code will be 1 on "error"
 /* eslint-enable [RULE,...] */    #
 /* eslint-disable-line RULE,... */#End-of-line comment
 /* eslint-disable-next-line RULE*/#
+
+/* eslint[-*] ... -- COMMENT */   #Can add COMMENT to any ESLint comment
 
 eslint --no-inline-config
 CONF.noInlineConfig               #BOOL. Prevent comments from changing config
@@ -608,7 +610,7 @@ indent [VAL] [OBJ]                #Indentation
                                   #OBJ, for number of indents in (multi-line):
                                   #  - SwitchCase NUM (def: 0): switch cases
                                   #  - VariableDeclarator[.var|let|const] NUMM (def: 1): declarations
-                                  #  - outerIIFEBody NUM (def: 1): IIFE
+                                  #  - outerIIFEBody NUM|'off' (def: 1): IIFE
                                   #  - MemberExpression NUMM (def: 1): VAR.VAR2...
                                   #  - FunctionDeclaration|FunctionExpression:
                                   #     - parameters NUMM (def: 1)
@@ -618,6 +620,7 @@ indent [VAL] [OBJ]                #Indentation
                                   #  - ObjectExpression NUMM (def: 1): OBJ
                                   #  - ImportDeclaration NUMM (def: 1): import
                                   #  - flatTernaryExpressions BOOL: if false (def), nested ?: must be indented
+                                  #  - offsetTernaryExpressions BOOL: if false (def), ?: must not be indented
                                   #  - ignoredNodes SELECTOR
                                   #  - ignoreComments BOOL (def: false)
                                   #NUMM means either:
@@ -1232,6 +1235,7 @@ no-duplicate-case                 #Avoid duplicate switch case VAL
 default-case [OBJ]                #Must have default case in switch statement
                                   #OBJ: commentPattern REGEXP (def: /^no default$/i) for a comment that can be used instead of
                                   #default case.
+default-case-last                 #Must have default case last in switch statement
 no-fallthrough [OBJ]              #Switch cases must use break
                                   #OBJ: commentPattern REGEXP (def: /^falls through$/i) for a comment
                                   #that can be used instead of break
@@ -1507,6 +1511,8 @@ array-bracket-newline [STR|OBJ]   #Linebreaks inside []:
                                   #  - { multiline: true } (def): required if some items are separated by newline
                                   #  - { minItems: NUM } (def: null): required if >= NUM items
 array-element-newline [STR] [OBJ] #Linebreaks between ARR items. Same conf|defaults as array-bracket-newline
+                                  #Can also use OBJ.ArrayExpression|ArrayPattern.* instead of OBJ.* to limit to EXPR or
+                                  #to destructuring
 comma-dangle [STR] [OBJ]          #Trailing commas
                                   #STR:
                                   #  - 'never' (def)
@@ -1519,7 +1525,7 @@ comma-dangle [STR] [OBJ]          #Trailing commas
 
 no-sparse-arrays                  #Avoid sparse arrays
 
-array-callback-return [OBJ]       #[TYPED_]ARR.from|every|some|filter|find[Index]|map|reduce[Right]|sort() must
+array-callback-return [OBJ]       #[TYPED_]ARR.from|every|some|filter|find[Index]|forEach|[flat]map|reduce[Right]|sort() must
                                   #have a return statement
                                   #OBJ: allowImplicit BOOL: if false (def), forbid "return" with no VAL
 unicorn/prefer-includes          ##Prefer ARR|STR.includes() over ARR|STR.indexOf()
@@ -1548,13 +1554,14 @@ no-useless-concat                 #Avoid STR_LIT + STR2_LIT
 prefer-template                   #Avoid STR + STR2, prefer `...`
 no-template-curly-in-string       #Avoid ${} inside "" or ''
 
-unicorn/*                        ##Module "eslint-plugin-unicorn" (15.0.1)
+unicorn/*                        ##Module "eslint-plugin-unicorn" (16.1.1)
 unicorn/prefer-starts-ends-with  ##Must use STR.startsWith|endsWith() when possible
 unicorn/prefer-trim-start-end    ##Prefer STR.trimStart|End() over STR.trimLeft|Right()
 unicorn/prefer-string-slice      ##Must use STR.slice() instead of STR.substr|substring()
+unicorn/prefer-replace-all       ##Must use STR.replaceAll(STR2) instead of STR.replace(/REGEXP/g) when REGEXP can be a literal STR2
 
 unicorn/no-hex-escape            ##Avoid \x... (prefer \u....)
-unicorn/number-literal-case      ##Consistent casing for 0x... 0o... 0b...
+unicorn/number-literal-case      ##Consistent casing for 0x... 0o... 0b... and NUMe...
 unicorn/escape-case              ##Must be uppercase after \x... \u...
 
 unicorn/no-console-spaces        ##Avoid console.log(STR, STR2) where STR or STR2 have trailing spaces
@@ -1568,7 +1575,9 @@ unicorn/no-console-spaces        ##Avoid console.log(STR, STR2) where STR or STR
 
 
 no-useless-escape                 #Avoid unnecessary escape sequences in STR|REGEXP
-unicorn/regex-shorthand          ##Prefer \d \D \w \W \s \S over [0-9] etc.
+unicorn/regex-shorthand [OBJ]    ##Prefer \d \D \w \W \s \S over [0-9] etc.
+                                 ##OBJ:
+                                 ##  - sortCharacterClasses BOOL (def: true): sort characters inside [...]
 unicorn/no-unsafe-regex          ##Avoid using too many * + or {} as it increases complexity exponentially
 no-control-regex                  #Avoid control characters in REGEXP
 no-div-regex                      #Avoid unescaped = at beginning of REGEXP
@@ -1576,6 +1585,7 @@ no-empty-character-class          #Avoid empty [] in REGEXP
 no-regex-spaces                   #Avoid multiple spaces in REGEXP (use {NUM} instead)
 no-misleading-character-class     #Avoid using S_CODEPOINT in . or [] without /REGEXP/u
                                   #Avoid using Emojis, regional symbols and combining characters in . or []
+no-useless-backreference          #Avoid \NUM that matches nothing
 no-invalid-regexp [OBJ]           #Avoid invalid REGEXP
                                   #OBJ: allowConstructorFlags STR_ARR (allowed flags, def is all)
 prefer-regex-literals             #Avoid new RegExp('...') (but new RegExp(VAR) is ok)
@@ -1605,13 +1615,11 @@ radix [STR]                       #With parseInt(..., RADIX):
 
 use-isnan [OBJ]                   #Must test NaN with [Number.]isNaN()
                                   #OBJ:
-                                  #  - enforceForSwitchCase BOOL (def: false): forbid case NaN and switch(NaN)
+                                  #  - enforceForSwitchCase BOOL (def: true): forbid case NaN and switch(NaN)
                                   #  - enforceForIndexOf BOOL (def: false): forbid ARR.[last]indexOf(NaN)
 no-compare-neg-zero               #Avoid VAL === -0 (prefer Object.is(VAL, -0))
 
 prefer-exponentiation-operator    #Must use ** not Math.pow()
-unicorn/
- prefer-exponentiation-operator   #Must use ** not Math.pow()
 no-bitwise [OBJ]                  #Avoids ^ ~ << >> >>> <<< & | (possible typo for && ||)
                                   #OBJ:
                                   #  - allow 'OP'_ARR: exceptions
@@ -1940,7 +1948,7 @@ node/shebang [OBJ]               ##Make sure binaries specified in package.json 
 compat/compat                    ##Avoid features unsupported by browsers, using current browserslist conf (see its doc)
                                  ##Can whitelist some features with CONF.settings.polyfills 'FEATURE_NAME'_ARR
                                  ##(see caniuse for what is "FEATURE_NAME").
-                                 ##Node module 'eslint-plugin-compat' (3.5.0-0)
+                                 ##Node module 'eslint-plugin-compat' (3.5.1)
 
 node/no-unsupported-features/TYPE##No JavaScript features unsupported for a given Node.js version
  [OBJ]                           ##OBJ:
@@ -1971,6 +1979,8 @@ no-restricted-imports             #Avoid import ... from 'MDL' using blacklisted
                                   #  - paths STRM_ARR: full path
                                   #     - can also usse STRM.importNames 'VAR'_ARR to disallow specific exported variables
                                   #  - patterns STR_ARR: globbing patterns (including globstar)
+no-restricted-exports [OBJ]       #Avoid export ... from 'MDL' using blacklisted OBJ.restrictedNamedExports STR_ARR
+                                  #STR_ARR can include 'default'
 no-restricted-modules             #Avoid require('CORE_MODULE') from blacklisted STRM_ARR
  ...STR_ARR|OBJC_ARR              #Can also be OBJ:
                                   #  - paths STRM_ARR: full path
@@ -2044,7 +2054,9 @@ you-dont-need-lodash-underscore/ ##Avoid Underscore|Lodash when there is a ES6 e
                                              \=+===============================+=/
 
 
-no-void                           #Avoid void VAL
+no-void [OBJ]                     #Avoid void VAL
+                                  #OBJ:
+                                  #  - allowAsStatement BOOL (def: false): allow as statement but not as EXPR
 no-with                           #Avoid "with"
 no-caller                         #Avoid arguments.caller|callee
 no-sequences                      #Avoid comma operator, except in for(...) or if EXPR wrapped in parenthesis
