no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -15,7 +15,7 @@
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #13.6.0 (current), 12.14.1 (active LTS), 10.18.1 (active LTS), 8.17.0 (active LTS)
+VERSION ==>                                     #13.7.0 (current), 12.14.1 (active LTS), 10.18.1 (active LTS), 8.17.0 (active LTS)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -246,9 +246,6 @@ SYSTEMERROR.syscall                             #STR (e.g. 'access')
 SYSTEMERROR.path|dest                           #Src|dest 'PATH', if any
 SYSTEMERROR.address|port                        #HOST|PORT, if any
 SYSTEMERROR.info                                #Extra info, if any
-
---enable-source-maps                         12*#Use source maps for ERROR.stack
-                                             12*#Does not work with ERROR.prepareStackTrace()
 
 
                                              /=+===============================+=\
@@ -592,6 +589,32 @@ PACKAGE.exports[.CONDITION].PATH             13*#'PATH2'. Like PACKAGE.exports[.
                                              13*#  - when PACKAGE.exports does not use PACKAGE.exports.PATH
                                              13*#     - including PACKAGE.exports {}
                                              13*#     - including PACKAGE.exports false
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:          SOURCE MAPS          :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+--enable-source-maps                         12*#Use source maps for ERROR.stack
+                                             12*#Does not work with ERROR.prepareStackTrace()
+                                             13*#Also enables MODULE.findSourceMap|SourceMap
+
+new MODULE.SourceMap(SOURCEMAP_OBJ)          13*#SOURCEMAP.
+                                             13*#SOURCEMAP_OBJ has source map v3 raw properties
+                                             13*#(version|sources|sourceRoot|sourcesContent|names|file|mappings)
+SOURCEMAP.payload                            13*#SOURCEMAP_OBJ
+SOURCEMAP.findEntry(LINE_NUM, COL_NUM)->OBJ  13*#Use "mappings" to map compiled|generated file LINE_NUM|COL_NUM to
+                                             13*#source|original file
+                                             13*#OBJ:
+                                             13*#  - generatedLine|Column NUM
+                                             13*#  - originalLine|Column NUM
+                                             13*#  - originalSource 'SOURCE_PATH'|null
+
+MODULE.findSourceMap('PATH'[, ERROR])        13*#Parse SOURCEMAP using sourceMappingURL comment (inline or external)
+ ->SOURCEMAP                                 13*#If inside an Error.prepareStackTrace(ERROR), should specify ERROR for caching reasons
 
 
                                              /=+===============================+=\
@@ -2338,6 +2361,9 @@ on("uncaughtException", FUNC(VAL, STR))         #Any exception VAL thrown and no
                                                 #STR is either:
                                                 #  - 'unhandledRejection': came from --unhandled-rejections=strict
                                                 #  - 'uncaughtException': otherwise
+on('uncaughtExceptionMonitor',FUNC(VAL,STR)) 13*#Same as on('uncaughtException') except:
+                                             13*#  - does not prevent process.exit(1)
+                                             13*#  - called first
 setUnaughtExceptionCaptureCallback              #Same as on("uncaughtException") except:
  (FUNC(VAL)|null)                               #  - unsets "uncaughtException" handler
                                                 #  - unsets --abort-on-uncaught-exception
@@ -2828,6 +2854,7 @@ runInContext(STR, COBJ[, RUN_OPTS])             #Like eval() but use context COB
                                                 #     - can also be TYPED_ARR|DATAVIEW
                                                 #     - copy of script, to improve load performance
                                                 #     - created by SCRIPT.createCachedData()->BUFFER
+                                             13*#       or SOURCE_TEXT_MODULE.createCachedData()->BUFFER
                                                 #     - V8.cachedDataVersionTag()->NUM:
                                                 #        - returns a hash of v8 version, CLI flags and CPU features
                                                 #        - to use as cache key
@@ -2888,6 +2915,7 @@ new SourceTextModule(STR[, OPTS])               #SOURCE_TEXT_MODULE, child of VM
                                                 #  - initalizeImportMeta(import.meta, VMMODULE):
                                                 #     - called during VMMODULE.evaluate()
                                                 #     - used to initialize import.meta by modifying it
+                                             13*#  - cachedData BUFFER: like VM.runInContext()
 new SyntheticModule('VAR'_ARR, FUNC()[,OPTS])13*#SYNTHETIC_MODULE, child of VMMODULE.
                                              13*#Define modules programmatically instead of through source text files.
                                              13*#Used for non-JavaScript modules.
