--- a/Languages/Metaprogramming/Source_maps/Core/mozilla_source_map.javascript.txt
+++ b/Languages/Metaprogramming/Source_maps/Core/mozilla_source_map.javascript.txt
@@ -10,6 +10,8 @@ ALTERNATIVES ==>                  #  - mozilla source-map (prefered):
                                   #     - handles full parsing|serializing
                                   #     - inline source maps, multi-mapping, reverse compilation
                                   #     - uses WASM for faster VLQ encoding|decoding
+                                  #  - Node.js MODULE.SourceMap (prefered when only Node >= 13.7.0)
+                                  #     - only parsing source map comment + generated->original mapping
                                   #  - source-list-map (prefered if simple file-wise mapping is enough):
                                   #     - file-wise (instead of symbol-wise) source map generation:
                                   #        - each whole source file (each of its lines) is mapped to single position in compiled file
