no commit message

--- a/Languages/Metaprogramming/Source_maps/Location/convert-source-map.node.txt
+++ b/Languages/Metaprogramming/Source_maps/Location/convert-source-map.node.txt
@@ -10,6 +10,8 @@ ALTERNATIVES ==>                  #  - convert-source-map (prefered for conversi
                                   #  - node-source-map-support (prefered for fetches):
                                   #     - meant for stack traces but has a helper for fetching source maps using
                                   #       sourceMappingURLs or SourceMap [S]
+                                  #  - Node.js native MODULE.findSourceMap() (prefered for fetches when only Node >= 13.7.0)
+                                  #     - only sourceMappingURLs comments
                                   #  - source-map-url:
                                   #     - REGEXP matching sourceMappingURL (and thin wrapper around it)
                                   #     - not maintained anymore
