no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -118,6 +118,7 @@ RESOURCE_TYPE                                   #Can be:
 
 executionAsyncId()->TASK_ID                     #Current microtask
 triggerAsyncId()->PARENT_TASK_ID                #Parent microtask, i.e. caller
+executionAsyncResource()->RESOURCE              #Current microtask's RESOURCE
 
 createHook(OPTS)->HOOK                          #Fires callbacks on new microtasks|resources, using OPTS:
                                                 #  - init(TASK_ID, RESOURCE_TYPE, PARENT_TASK_ID, RESOURCE):
@@ -467,6 +468,9 @@ require.resolve(STR[, OPTS])->'/PATH'           #How require(STR) would resolve,
                                                 #  - paths 'DIR'_ARR: alternative directories to look into.
                                                 #    Their [.../[..]]./node_modules will always be searched.
 require.resolve.paths(STR)->'DIR'_ARR           #Directories that would be looked into when require(STR) would resolve
+import.meta.resolve(STR[, CURRENT_URL])
+ ->PROMISE_'/PATH'                           13*#Same as require.resolve() but for ESM
+--experimental-import-meta-resolve           13*#Needed for import.meta.resolve()
 
 require.cache['/PATH']                          #require() cache (i.e. modules are only loaded once).
                                                 #'/PATH' is require.resolve() result
@@ -2426,6 +2430,7 @@ OS.constants.signals.SIGNAME                    #SIGNUM
                                                 #  - process.kill(): SIGINT SIGTERM SIGKILL
                                                 #  - process.on(): SIGINT SIGABRT SIGHUP SIGBREAK SIGWINCH SIGILL SIGFPE SIGSEGV
 on('SIGNAL', FUNC('SIGNAL'))                    #Fires when signal emitted on current process.
+--trace-sigint                               13*#Print a stack trace on SIGINT. Still keep SIGINT default handler
 
 on('unhandledRejection, FUNC(VAL, PROMISE))     #When PROMISE:
                                                 #  - is rejected
@@ -3029,7 +3034,8 @@ public|privateEncrypt|Decrypt                   #Encrypts/decrypts asym. (RSA) T
 
 generateKeyPair[Sync]('TYPE', OPTS              #Create asym key pair, where SBUFFER is publicKey and SBUFFER privateKey
  [, FUNC(ERROR, SBUFFER, SBUFFER2)])            #'TYPE' is 'rsa', 'dsa', 'ec', 'ed25519', 'ed448', 'x25519', 'x448'
- [->{ publicKey|privateKey }]                   #OPTS:
+ [->{ publicKey|privateKey }]                13*#or 'dh'
+                                                #OPTS:
                                                 #  - publicKeyEncoding OBJ (def: produces a KEY):
                                                 #     - type 'pkcs1' (RSA only) or 'spki' (prefered)
                                                 #     - format 'pem' or 'der'
@@ -3053,9 +3059,15 @@ createPrivate|PublicKey(OPTS|SBUFFER)->KEY   11*#Create asym key pair. OPTS:
                                              11*#  - passphrase SBUFFER (privateKey only)
 createSecretKey(BUFFER)->KEY                 11*#Create sym key.
 
+diffieHellman(OPTS)->BUFFER                  13*#Compute Diffie-Hellman secret using OPTS:
+                                             13*#  - privateKey KEY
+                                             13*#  - publicKey KEY
+                                             13*#KEY must be of same type 'dh|ec|x448|x25519'
+
 KEY.type                                     11*#'public|private' (if async) or 'secret' (if sync)
 KEY.asymmetricKeyType                        11*#'rsa', 'dsa', 'ec', (if sym key) undefined,
                                              12*#'ed25519', 'ed448', 'x25519', 'x448', 'rsa-pss'
+                                             13*#'dh'
 KEY.symmetricSize                            11*#Byte length NUM. undefined if async
 KEY.export([OPTS])->SBUFFER                  11*#OPTS (if async):
                                              11*#  - type, format, passphrase: like createPrivate|PublicKey()
@@ -3244,7 +3256,9 @@ PERFGCTIMING                                    #PERFENTRY for garbage collector
                                                 #  - name 'gc'
                                                 #  - startTime
                                                 #  - duration DOMTIMESTAMP
-                                                #  - kind: constants.NODE_PERFORMANCE_GC_MINOR|MAJOR|INCREMENTAL|WEAKCB (1|2|4|8)
+                                                #  - kind: constants.NODE_PERFORMANCE_GC_*:
+                                                #     - MINOR|MAJOR|INCREMENTAL|WEAKCB (1|2|4|8)
+                                                #     -
 
 PERFORMANCE.timerify(FUNC)->FUNC                #Make FUNC(...) create a PERFENTRY with:
                                                 #  - entryType 'function'
