no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -15,7 +15,7 @@
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #13.8.0 (current), 12.16.0 (active LTS), 10.19.0 (active LTS), 8.17.0 (active LTS)
+VERSION ==>                                     #13.9.0 (current), 12.16.1 (active LTS), 10.19.0 (active LTS), 8.17.0 (active LTS)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -118,7 +118,7 @@ RESOURCE_TYPE                                   #Can be:
 
 executionAsyncId()->TASK_ID                     #Current microtask
 triggerAsyncId()->PARENT_TASK_ID                #Parent microtask, i.e. caller
-executionAsyncResource()->RESOURCE              #Current microtask's RESOURCE
+executionAsyncResource()->RESOURCE           13*#Current microtask's RESOURCE
 
 createHook(OPTS)->HOOK                          #Fires callbacks on new microtasks|resources, using OPTS:
                                                 #  - init(TASK_ID, RESOURCE_TYPE, PARENT_TASK_ID, RESOURCE):
@@ -983,6 +983,7 @@ createInterface(OPTS)->INTERFACE                #OPTS:
                                                 #  - crlfDelay NUM (def: 100, cannot be lower): if input reads \r and \n
                                                 #    successively but more than NUMms apart, treat them as two newlines, not one
                                                 #  - escapeCodeTimeout NUM (def: 500) (in ms): how long to wait when starting an ESC sequence
+                                             13*#  - tabSize NUM (def: 8)
 INTERFACE.close()                               #Called by ISTREAM.end() and CTRL-C|D|Z
 INTERFACE.on("close", FUNC())                   #
 
@@ -2482,8 +2483,10 @@ arch                                            #Same as OS.arch()
 platform                                        #Same as OS.platform()
 
 memoryUsage()->OBJ                              #OBJ
-                                                #  - rss, heapTotal, heapUsed
-                                                #  - external
+                                                #  - rss NUM: space occupied by process (including code)
+                                                #  - heapUsed|heapTotal NUM: subset of rss for heap
+                                                #  - external NUM: subset of heap for JavaScript objects stored in C++
+                                             13*#  - arrayBuffers NUM: subset of external for [SHARED_]ARR_BUFFER
 cpuUsage([OBJ])->OBJ                            #OBJ: user|system NUM (time usage, in microseconds)
                                                 #If OBJ passed, is difference.
 uptime()                                        #
@@ -2760,6 +2763,7 @@ global.*                                        #In worker, like in parent excep
                                                 #  - exit() affects current thread not current process
                                                 #  - no abort|chdir|initgroups|set*|umask(VAL)|on('SIGNAL')
                                             <11*#     - no execArgv|umask()
+                                            <13*#     - no report.*
                                                 #  - env|title are read-only
                                                 #Worker and parent's global|process.* are distinct.
                                                 #Unlike DOM, no concept of WORKERGLOBAL nor "self".
@@ -3256,9 +3260,10 @@ PERFGCTIMING                                    #PERFENTRY for garbage collector
                                                 #  - name 'gc'
                                                 #  - startTime
                                                 #  - duration DOMTIMESTAMP
-                                                #  - kind: constants.NODE_PERFORMANCE_GC_*:
-                                                #     - MINOR|MAJOR|INCREMENTAL|WEAKCB (1|2|4|8)
-                                                #     -
+                                                #  - kind: constants.NODE_PERFORMANCE_GC_MINOR|MAJOR|INCREMENTAL|WEAKCB (1|2|4|8)
+                                             13*#  - flags: constants.NODE_PERFORMANCE_GC_FLAGS_NO|CONSTRUCT_RETAINED|FORCED|
+                                             13*#    SYNCHRONOUS_PHANTOM_PROCESSING|ALL_AVAILABLE_GARBAGE|ALL_EXTERNAL_MEMORY|
+                                             13*#    SCHEDULE_IDLE (0|2|4|8|16|32|64)
 
 PERFORMANCE.timerify(FUNC)->FUNC                #Make FUNC(...) create a PERFENTRY with:
                                                 #  - entryType 'function'
@@ -3619,6 +3624,7 @@ getHeapSnapshot()->ISTREAM                   11*#Create a V8 heap snapshot. This
                                              11*#This can be used to:
                                              11*#  - restart the process later, or speed up startup time (not implemented yet)
                                              11*#  - inspect memory/heap in Chrome devTools
+WORKER.takeHeapSnapshot()->PROMISE_ISTREAM   13*#Same for a WORKER
 writeHeapSnapshot(['FILENAME'])->'FILENAME'  11*#Write getHeapSnapshot() to a file in process.cwd()
                                              11*#'FILENAME' defaults to 'Heap-${yyyymmdd}-${hhmmss}-${pid}-${threadId}.heapsnapshot'
 --heapsnaphot-signal=SIGNAL                  12*#Do writeHeapSnapshot() on SIGNAL
