no commit message

--- a/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
@@ -8,7 +8,7 @@
 ALTERNATIVES ==>                  #  - typescript (preferred)
                                   #  - flow: very similar to TypeScript, a little less features, less focus on extending JavaScript, less high-profile
 
-VERSION ==>                       #3.8.0-rc
+VERSION ==>                       #3.8.2
 
 
                                              /=+===============================+=\
@@ -1177,7 +1177,8 @@ tslib                             #Similar to core-js but fewer features:
                                   #  - ITERATOR
                                   #  - __esModule logic
                                   #  - @DECORATOR
-                                  #Version 1.10.0
+                                  #  - private fields
+                                  #Version 1.11.0
 
 --target STR                      #Inline helpers from tslib during transpile.
                                   #Based on ES version, among es3 (def) or es5|6|2015-2020|next
